# go-sensei

./: .gitignore  README.md  pyproject.toml
app/: katago_analyze.py  main.py  review_game.py  sgf_replay.py
app/ai/: __init__.py  ai_player.py
app/analysis/: katago_client.py  live_analyzer.py
app/core/: board.py  coordinates.py  move.py  sgf.py  stone.py
app/data/: __init__.py  game_store.py  import_elite_games.py
app/learning/: __init__.py  self_play_memory.py
app/recommendation/: __init__.py  move_lanes.py
app/review/: __init__.py  concepts.py  detailed_left_coach.py  elite_game_knowledge.py  free_go_knowledge.py  game_reviewer.py  live_move_coach.py  position_coach.py  pro_go_knowledge.py  universal_coach.py
app/ui/: board_window.py  board_window_before_left_coach_fix.py
data/sgf/: sample_game.sgf
tests/: test_board.py  test_coordinates.py  test_katago_client.py  test_project_setup.py  test_sgf.py
